# game-platform

./: .gitignore  ENVIRONMENT_VARIABLES_HANDLING.md  README.md  build-with-rust.sh  mkdocs.yml  nx.json  package.json  tsconfig.base.json  workspace.json
apps/game-platform/: amplify.yml  custom-webpack.config.js  jest.config.ts  project.json  tsconfig.json
apps/game-platform-e2e/: cypress.json  project.json
apps/game-platform/sample-data/: heroes-obstacles.json  (+1 more)
digidash-core/: README.md  package.json
docs/: index.md
docs/api/: overview.md
docs/components/: overview.md
docs/getting-started/: configuration.md  installation.md
examples/basic-trivia/: package.json
libs/award/: README.md  jest.config.ts  project.json
libs/aws/: jest.config.ts  package.json  project.json
libs/calendar/: jest.config.ts  package.json  project.json
libs/commonlib/: jest.config.ts  package.json  project.json
libs/login/: jest.config.ts  package.json  project.json
libs/minigames/: README.md  jest.config.ts  package.json  project.json  tsconfig.lib.json
libs/obstacle-pool-wasm/: Cargo.toml  README.md  build.sh  index.d.ts  index.js  index.ts  package-lock.json  package.json  temp-tsconfig.json  tsconfig.json
libs/obstacle-pool-wasm/src/: index.ts  lib.rs
libs/search/: jest.config.ts  package.json  project.json
libs/temp/: jest.config.ts  project.json
libs/topbar/: README.md  jest.config.ts  project.json
libs/ui/: package.json
publishNotification/: index.js
stubs/commonlib/: index.ts
stubs/login/: index.ts
stubs/obstacle-pool-wasm/: index.ts
(+516 files in other folders)
